<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge">

    </ProgressBar>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/email"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </AutoCompleteTextView>

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:id="@+id/email_login_button"
            android:text="@string/email_login_text"
            android:textColor="@color/black"
            android:background="@color/material_on_surface_stroke"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
        <TextView
            android:id="@+id/not_registered"
            android:text="@string/not_registered_text"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <Button
            android:id="@+id/register_button"
            android:text="@string/register_text"
            android:textColor="@color/black"
            android:background="@color/material_on_surface_stroke"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>


</LinearLayout>