<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".RegisterAccountActivity">

    <ProgressBar
        android:id="@+id/register_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge">

    </ProgressBar>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/account_register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_register"
            android:hint="@string/username_hint"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:paddingBottom="15dp"
            android:layout_height="wrap_content"
            >

        </EditText>
        <AutoCompleteTextView
            android:id="@+id/email_register"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </AutoCompleteTextView>

        <EditText
            android:id="@+id/password_register"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:id="@+id/register_button"
            android:text="@string/register_text"
            android:textColor="@color/black"
            android:background="@color/material_on_surface_stroke"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>
    </LinearLayout>


</LinearLayout>